# iDrive-api-wrapper

./: .gitignore  Constants.py  README.md  auth.py  dev-requirements.txt  exceptions.py  iDrive.py  pyproject.toml
models/: Enums.py  File.py  Folder.py  Item.py  ItemsList.py  Resource.py  Share.py  User.py  VideoMetadata.py  baseResource.py  namedTuples.py
src/iDriveApiWrapper/: Config.py  Constants.py  exceptions.py  iDrive.py
src/iDriveApiWrapper/downloader/: AutoScaler.py  Decryptor.py  DownloadWorker.py  FileFinalizer.py  FinalizeWorker.py  FragmentDownloader.py  MetadataFetcher.py  TaskPlanner.py  UltraDownloader.py  state.py  typehints.py  utils.py
src/iDriveApiWrapper/models/: Bot.py  DiscordSettings.py  Enums.py  File.py  Folder.py  Item.py  ItemsList.py  Moment.py  ProfileSettings.py  Resource.py  Share.py  Subtitle.py  Tag.py  User.py  UserProfile.py  UserSettings.py  VideoMetadata.py  Webhook.py  WebsocketEvent.py  namedTuples.py
src/iDriveApiWrapper/uploader/: DiscordUploader.py  Encryptor.py  PrepareRequestWorker.py  UltraUploader.py  UploadWorker.py  VideoExtractor.py  models.py  state.py  utils.py
src/iDriveApiWrapper/utils/: AuthClient.py  Decryptor.py  StreamCipherBase.py  UltraDownloader.py  WebsocketManager.py  common.py  decorators.py  networker.py
utils/: common.py  decorators.py  networker.py
